[gd_scene load_steps=5 format=3 uid="uid://dqqoe1p0y1ann"]

[ext_resource type="Script" path="res://scripts/Spark2.gd" id="1_h6pks"]
[ext_resource type="Texture2D" uid="uid://dgi1ildc43y02" path="res://assets/Spark.png" id="2_6p20u"]
[ext_resource type="PackedScene" uid="uid://507dapfpwiru" path="res://Spark3.tscn" id="2_wkyru"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qa21a"]
size = Vector2(9.5, 5)

[node name="Megabulletb" type="Area2D"]
script = ExtResource("1_h6pks")
spark3_scene = ExtResource("2_wkyru")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.75, 0.5)
shape = SubResource("RectangleShape2D_qa21a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(5.96046e-08, 1.26647e-10)
rotation = 1.57233
scale = Vector2(0.387335, 0.387335)
texture = ExtResource("2_6p20u")

[node name="Meiosis" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Meiosis" to="." method="_on_meiosis_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
